SD-2002-01-18-2: Enhancem.  Minor PTF fix for setting nice values on NEC SX-6

EB-2002-01-18-1: Bugfix:    - qalter of job name caused core of master

JG-2002-01-18-0: Enhancem.  Simulation mode for large clusters.
                            When the qmaster_param simulate_host=1 is set,
                            a cluster with a high number of hosts can be 
                            simulated. 

EB-2002-01-18-0: Bugfix:    - reactivated qdel output for already deleted jobs
                            - enabled signalling for already deleted jobs

CR-2002-01-18-1: Testsuite: - general performance modified cluster configuration
                 Bugfix:      without restoring it.

CR-2002-01-18-0: Testsuite: - new command line parameter: re_init_on_tcl_error
                 Enhancem.:   (if set the testsuite will do a install re_init 
                               before starting the next test)
                            - extend timeout values in submit_hosts check

AA-2002-01-17-1: Bugfix:    - qmonMirrorMultiAnswer
                            - I18N in qmon

CR-2002-01-17-1: Testsuite: - submit_job():
                 Enhancem.:     new error state -13 for unkown option error
                 Bugfix:    - fixed broken file_parsing test
                            - source of tcl files at startup of each test

CR-2002-01-17-0: Bugfix:    ERROR(()) call without string limitation "SFQ"
                            in execd caused segmentation fault when job
                            name length >  (ca.) 2K byte

EB-2002-01-17-0: Enhancem.: Improved logging of shadowd

AA-2002-01-17-0: Feature:   Security:
                            - cert scripts

JG-2002-01-16-0: Enhancem.: Execd can send load values for another host than
                            itself and qmaster will accept these load values.
                            Simulation mode to make qmaster not trash load
                            values for simulated hosts can be switched on